apps/memorizer/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memorizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memorizer
  template:
    metadata:
      labels:
        app: memorizer
    spec:
      containers:
        - name: memorizer
          image: registry.fullstack.pw/memorizer:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
