apps/memorizer/kustomize/base/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: memorizer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: memorizer
  template:
    metadata:
      labels:
        app: memorizer
    spec:
      containers:
        - name: memorizer
          image: registry.fullstack.pw/library/memorizer:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
  strategy:
    blueGreen:
      activeService: memorizer
      previewService: memorizer-preview
      autoPromotionEnabled: false
      scaleDownDelaySeconds: 30
      prePromotionAnalysis:
        templates:
          - templateName: cypress-tests
        args:
          - name: app-name
            value: memorizer
          - name: app-url
            value: "https://dev.memorizer.fullstack.pw"
          - name: environment
            value: "dev"
