apps/memorizer/kustomize/base/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorizer-preview
spec:
  selector:
    app: memorizer
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
