apps/memorizer/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: memorizer
spec:
  selector:
    app: memorizer
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
