apps/memorizer/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: memorizer
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  hosts:
    - "dev.memorizer.fullstack.pw"
  gateways:
    - istio-system/default-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: memorizer.default.svc.cluster.local
            port:
              number: 8080
